--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html>
 
 <head>
-  
+  <style>
+    @import url('https://fonts.googleapis.com/css2?          
+ family=Inter:wght@100; 200; 300; 400; 500; 600; 700; 800; 900&display=swap');
+  </style>
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-  Call to actions
-  
+  <i class="fa-solid fa-house"></i>
+
 </body>
 
 </html>
