Created global css file

--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
 
 <head>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?          
- family=Inter:wght@100; 200; 300; 400; 500; 600; 700; 800; 900&display=swap');
-  </style>
+  
   <title>replit</title>
+  <link href="global.css" rel="stylesheet" type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -14,7 +12,11 @@
 </head>
 
 <body>
-  <i class="fa-solid fa-house"></i>
+  <div class="input-button">
+    <input placeholder="Type you email here" />
+    <button class="btn-primary">Subscribe</button>
+  </div>
+
 
 </body>
 
