--- a/CTA-27/index.html
+++ b/CTA-27/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>CTA-27</title>
-  <link href="global.css" rel="stylesheet" type="text/css" />
+  <link href="../global.css" rel="stylesheet" type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -12,7 +12,15 @@
 </head>
 
 <body>
-  HELLO
+  <div class="page">
+    <div class="content">
+      <h1>Try using our templates!</h1>
+      <div class="buttons">
+        <button class="btn-primary btn-large">Try me</button>
+        <button class="btn-secondary btn-large">Try me</button>
+      </div>
+    </div>
+  </div>
 
 
 </body>
