--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>CTA-44</title>
+  <title>Call to actions</title>
   <link href="global.css" rel="stylesheet" type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -12,8 +12,22 @@
 </head>
 
 <body>
-  
-
+  <div class="show">
+    <a href="CTA-26/">CTA-26</a>
+    <iframe src="CTA-26/"></iframe>
+  </div>
+  <div class="show">
+    <a href="CTA-27/">CTA-26</a>
+    <iframe src="CTA-27/"></iframe>
+  </div>
+  <div class="show">
+    <a href="CTA-30/">CTA-26</a>
+    <iframe src="CTA-30/"></iframe>
+  </div>
+  <div class="show">
+    <a href="CTA-44/">CTA-26</a>
+    <iframe src="CTA-44/"></iframe>
+  </div>
 
 </body>
 
