Fixed presentation page

--- a/PRES.PAGE/index.html
+++ b/PRES.PAGE/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>Call to actions</title>
-  <link href="global.css" rel="stylesheet" type="text/css" />
+  <link href="../global.css" rel="stylesheet" type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -13,20 +13,20 @@
 
 <body>
   <div class="show">
-    <a href="CTA-26/">CTA-26</a>
-    <iframe src="CTA-26/"></iframe>
+    <a href="https://call-to-actions.tudorcristianpo.repl.co/CTA-26//">CTA-26</a>
+    <iframe src="../CTA-26/"></iframe>
   </div>
   <div class="show">
-    <a href="CTA-27/">CTA-26</a>
-    <iframe src="CTA-27/"></iframe>
+    <a href="https://call-to-actions.tudorcristianpo.repl.co/CTA-27/">CTA-27</a>
+    <iframe src="../CTA-27/"></iframe>
   </div>
   <div class="show">
-    <a href="CTA-30/">CTA-26</a>
-    <iframe src="CTA-30/"></iframe>
+    <a href="https://call-to-actions.tudorcristianpo.repl.co/CTA-30/">CTA-30</a>
+    <iframe src="../CTA-30/"></iframe>
   </div>
   <div class="show">
-    <a href="CTA-44/">CTA-26</a>
-    <iframe src="CTA-44/"></iframe>
+    <a href="https://call-to-actions.tudorcristianpo.repl.co/CTA-44/">CTA-44</a>
+    <iframe src="../CTA-44/"></iframe>
   </div>
 
 </body>
