--- a/CTA-36/index.html
+++ b/CTA-36/index.html
@@ -13,7 +13,15 @@
 
 <body>
 
+  <div class="layout">
+    <div class="cta-image">
+    </div>
+    <div class="content">
 
+      <h1>Try using our templates!</h1>
+      <button class="btn-primary">Try now</button>
+    </div>
+  </div>
 </body>
 
 </html>
