--- a/CTA-25/index.html
+++ b/CTA-25/index.html
@@ -12,7 +12,18 @@
 </head>
 
 <body>
-  
+  <div class="center-layout">
+    <div class="layout">
+      <div class="content">
+        <h1>Try using our templates!</h1>
+        <p>Let’s embody your beautiful ideas together, simplify the way you visualize your next big things.</p>
+      </div>
+      <div class="buttons-group">
+        <button class="btn-primary btn-large">Try me</button>
+        <button class="btn-secondary btn-large">Try me</button>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
