--- a/CTA-42/index.html
+++ b/CTA-42/index.html
@@ -12,7 +12,17 @@
 </head>
 
 <body>
-  
+  <div class="page">
+    <div class="content">
+      <h1>Try using our templates!</h1>
+      <p>Let’s embody your beautiful ideas together, simplify the way you visualize your next big things.</p>
+      <div class="input-button  cta-form">
+        <input placeholder="Enter your email address" />
+        <button class="btn-primary">Subscribe</button>
+      </div>
+      <p>998 Devonshire Ave.Camp Hill, PA 1701</p>
+    </div>
+  </div>
 </body>
 
 </html>
